<resources>
    <string name="app_name">Foodchallenge Place</string>
    <string name="button_addFoodchallengeplace">Add Food Challenge</string>
    <string name="hint_foodchallengeplaceTitle">Food Challenge Title</string>
    <string name="hint_restaurant">Restaurant </string>
    <string name="hint_address">Address </string>
    <string name="hint_difficulty">Difficulty </string>
    <!--  Main  Menu Strings-->
    <string name="menu_addFoodchallengeplace">Add</string>
    <string name="menu_mapMode">Map Mode</string>
    <string name="menu_logout">Logout</string>
    <!--    Foodchallenge Place Menu Strings-->
    <string name="menu_saveFoodchallengeplace">Save</string>
    <string name="menu_deleteFoodchallengeplace">Delete</string>
    <string name="menu_deleteAllFoodchallengeplace">Delete All</string>
    <string name="menu_cancelFoodchallengeplace">Cancel</string>

    <!--    Foodchallenge Place Strings-->
    <string name="enter_foodchallengeplace_title"> Please enter the Food Challenge Title </string>
    <string name="save_foodchallengeplace"> Save Food Challenge </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_foodchallengeplace_image">Select Image</string>
    <string name="change_foodchallengeplace_image"> Change Image</string>
    <string name="button_location">Save Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_foodchallenge_place_maps">Map of All Foodchallenge Places</string>
    <string name="foodchallengeplace_image_placeholder">Foodchallenge Place Image</string>
    <string name="foodchallengeplace_title_placeholder">Foodchallenge Place Title</string>
    <string name="foodchallengeplace_restaurant_placeholder">Restaurant</string>
    <string name="foodchallengeplace_address_placeholder">Address</string>
    <string name="foodchallengeplace_difficulty_placeholder">Difficulty</string>
    <string name="foodchallengeplace_challengepicker_placeholder">Challenge Type</string>

    <!--    Log In activity-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>